<resources>
    <string name="app_name">CNC</string>
    <string name="no_message">no messages yet</string>
    <string name="text_placeholder">placeholder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends_name">Friends</string>
    <string name="chats">Chats</string>
    <string name="create_group">Create group</string>
    <string name="create_chat">Create chat</string>
    <string name="close">Close</string>
    <string name="popup_menu_chat">Chat</string>
    <string name="popup_menu_info">Info</string>
    <string name="popup_menu_delete">Delete</string>
    <string name="sign_in">Sign in</string>
    <string name="username_or_email">Username or email</string>
    <string name="remember_me">Remember me</string>
    <string name="login_with_your_social_media_account">Login with your social media account</string>
    <string name="register_now">Register now</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="mail_domain">\@gmail.com</string>
    <string name="password">Password</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="create_account">Create your account</string>
    <string name="dont_have_account">Don\'t have an account? <font color="#99BC47">Register</font></string>
    <string name="have_account">Already have an account? <font color="#99BC47">Log in</font></string>
    <string name="small_password_error">More than 8 characters are required</string>
    <string name="mail_not_exist_error">"Error 😬, such mail does not exist "</string>
    <string name="wrong_email">Email is wrong</string>
    <string name="passwords_not_match_error">Upps 🙁, your Passwords do not match</string>
    <string name="field_empty_error">"This field is empty"</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or_login_with">Or login with</string>
    <string name="whitespase_error">Must not contain whitespace</string>
    <string name="friends_search_hint">Type username here</string>
    <string name="find_user">Find user</string>
    <string name="add_to_friends">Add to friends</string>
</resources>