<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.chats.ChatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/chat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_nunito_bold"
            android:text="@string/chats"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/create_group_button"
            android:layout_width="51dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/chat_item_color"
            android:src="@drawable/group_chat_image"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/chat_text"
            app:layout_constraintEnd_toStartOf="@id/create_chat_button"
            app:layout_constraintTop_toTopOf="@id/chat_text"
            android:contentDescription="@string/create_group"/>

        <ImageButton
            android:id="@+id/create_chat_button"
            android:layout_width="51dp"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/chat_item_color"
            android:src="@drawable/create_chat_image"
            android:padding="12dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/create_group_button"
            app:layout_constraintEnd_toStartOf="@id/close_window_button"
            app:layout_constraintTop_toTopOf="@id/create_group_button"
            android:contentDescription="@string/create_chat"/>

        <ImageButton
            android:id="@+id/close_window_button"
            android:layout_width="51dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/chat_item_color"
            android:src="@drawable/window_exit_image"
            android:padding="15dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@id/create_chat_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_chat_button"
            android:contentDescription="@string/close"/>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/close_window_button"
            app:layout_constraintStart_toStartOf="@id/chat_text"
            app:layout_constraintTop_toBottomOf="@id/barrier">

            <SearchView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/chat_item_color"
                android:queryHint="Search chat"
                android:iconifiedByDefault="false"
                android:queryBackground="@null"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="chat_text, create_group_button, create_chat_button, close_window_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/chat_item" />

</LinearLayout>