<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".presentation.friendsScreen.findfriendsscreen.FindFrienndsScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/friends_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_nunito_semi_bold"
            android:text="@string/find_user"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/close_window_button"
            android:layout_width="51dp"
            android:layout_height="45dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/chat_item_color"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src = "@drawable/window_exit_image"
            android:contentDescription="@string/close"
            app:layout_constraintBottom_toBottomOf="@+id/friends_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/friends_text" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@id/close_window_button"
            app:layout_constraintStart_toStartOf="@id/friends_text"
            app:layout_constraintTop_toBottomOf="@id/barrier">

            <SearchView
                android:id="@+id/search_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/chat_item_color"
                android:queryHint="@string/friends_search_hint"
                android:iconifiedByDefault="false"
                android:queryBackground="@null"/>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="friends_text, close_window_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/friends_item" />

</LinearLayout>