<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.signScreen.SignScreenFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.6"
        android:background="@drawable/img"
        android:scaleX="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:cardCornerRadius="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:fontFamily="@font/font_nunito_semi_bold"
                    android:text="@string/sign_in"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:hint="@string/username_or_email"
                    android:inputType="textPersonName"
                    android:text=" " />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:ems="10"
                    android:inputType="textPassword" />

                <CheckBox
                    android:id="@+id/checkRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/remember_me" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/sign_in" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_margin="10dp"
                    android:alpha="0.2"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_nunito_semi_bold"
                    android:text="@string/login_with_your_social_media_account"
                    android:textSize="13sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_margin="10dp"
                    android:alpha="0.2"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/font_nunito_semi_bold"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="13sp" />

                <Button
                    android:id="@+id/btnRegisterNow"
                    android:layout_width="150dp"
                    android:layout_height="38dp"
                    android:layout_margin="10dp"
                    android:background="@color/white"
                    android:text="@string/register_now" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo_sign"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circular" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>